<resources>
    <string name="app_name">Omi Plus</string>

    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_content_splash">SPLASH\nSCREEN</string>

    <string name="host_game">Host Game</string>
    <string name="join_game">Join Game</string>
    <string name="title_activity_omi_game">OmiGameActivity</string>

    <string name="join_a_game">Join a Game</string>
    <string name="join_btn_search">Search Games</string>
    <string name="join_btn_searching">Searching&#8230;</string>

    <string name="host_joined_list">Joining</string>
    <string name="host_select_partner">Select your partner</string>
    <string name="host_btn_go_visible">Go Visible</string>
    <string name="host_btn_visible">Visible</string>

    <string name="game_player_name_1">Player1</string>
    <string name="game_player_name_2">Player2</string>
    <string name="game_player_name_3">Player3</string>
    <string name="game_player_name_4">Player4</string>

    <string name="game_player_won">Won 0</string>

    <string name="omi_card_name">A</string>
    <string name="game_trumps">Trumps</string>


</resources>
