<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="@color/blue_theme">

        <TextView
            android:id="@+id/txtPlayerName3"
            android:gravity="center"
            android:textSize="22dp"
            android:text="@string/game_player_name_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:background="@color/blue_dark">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@color/blue_dark">

            <TextView
                android:id="@+id/txtPlayerName4"
                android:gravity="center"
                android:textSize="22dp"
                android:text="@string/game_player_name_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="@color/blue_light">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@color/blue_dark">

            <TextView
                android:id="@+id/txtPlayerName2"
                android:gravity="center"
                android:textSize="22dp"
                android:text="@string/game_player_name_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="@color/blue_theme">

        <TextView
            android:id="@+id/txtPlayerName1"
            android:gravity="center"
            android:textSize="22dp"
            android:text="@string/game_player_name_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:background="@color/blue_theme">
    </LinearLayout>

</LinearLayout>
