<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="100dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/rect_shape">

    <TextView
        android:id="@+id/txtHeader"
        android:gravity="center"
        android:textSize="22dp"
        android:text="@string/host_joined_list"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/top_rect_shape"/>

    <LinearLayout
        android:background="@color/clear_color"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/playerOne"
        android:paddingLeft="16dp"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:text="@string/join_a_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_light"/>

    <LinearLayout
        android:background="@color/clear_color"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/playerTwo"
        android:paddingLeft="16dp"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:text="@string/join_a_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_light"/>

    <LinearLayout
        android:background="@color/clear_color"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/playerThree"
        android:paddingLeft="16dp"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:text="@string/join_a_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_light"/>

    <LinearLayout
        android:id="@+id/listLayout"
        android:background="@color/clear_color"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">
    </LinearLayout>

    <Button
        android:id="@+id/btnSearch"
        android:text="@string/host_btn_go_visible"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bottom_rect_shape"/>

</LinearLayout>
